@@ -25,9 +25,8 @@ Here is some ideas that I have during project's development.
 ## Others
 
 - For geek or console user, we could do an interface to simplify files creation. With Lua, lambda users could create files quickly and without any knowledge.
-- permit to add an introduction
 - permit to add plugins?
 - atom feeds
 - HTML verification?
-- use more LUA to parse and create public files
+- use more LUA to parse and create public files. Use ROPE: http://lua-users.org/wiki/LuaRopes and http://www.tecgraf.puc-rio.br/~lhf/ftp/lua/5.1/lrope.tar.gz
 - generate a xml.gz for web robots
