@@ -96,6 +96,14 @@ Note that Makefly use the [markdown format](http://daringfireball.net/projects/m
 
 If you want to add some static files, just add them to the *static* directory. They will be copied in destination directory.
 
+### The 'special' directory
+
+This one is named **special** because it can contain some file you have to create in order to activate a functionality:
+
+  * //about.md// : Is the content of an about's page about your website. It will add an item in the website main menu (If your theme support it.)
+  * //sidebar.md// : Add a sidebar on your website. The theme have to support this function.
+  * //introduction.md// : Display this file's content as an introduction to your website homepage. This could change regarding the choosen theme.
+
 ## Use it!
 
 After having created *makefly.rc* (from makefly.rc.example) and having created some posts, just do this:
