@@ -6,6 +6,7 @@ Current (0.2-dev)
 	- Check variable to be unique in templates
 	- Update documentation
 	- Statuses from identica
+	- Introduction: permit a user to add an introduction to its website
 
 Version 0.1.1 (release 2013-01-17)
 	- Permit user to choose page ' suffix
